<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/login_activity_banner"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="@drawable/rounded_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textAppearance="@style/register_title_appearence"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:background="@drawable/circle_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/fts" />

        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/login_activity_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_activity_banner"
        app:layout_constraintBottom_toTopOf="@+id/login_activity_password"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="50dp"
        android:hint="@string/user"
        android:textSize="18sp"
        android:textAppearance="@style/hintInputAppearence"
        android:inputType="number"/>

    <EditText
        android:id="@+id/login_activity_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_activity_user"
        app:layout_constraintBottom_toTopOf="@+id/login_activity_button"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/password"
        android:textSize="18sp"
        android:textAppearance="@style/hintInputAppearence"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_activity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        app:layout_constraintTop_toBottomOf="@+id/login_activity_password"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/rounded_purple_button"
        android:text="@string/login"
        android:textAppearance="@style/buttonTextAppearence"/>

    <TextView
        android:id="@+id/login_activity_forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotPassword"
        app:layout_constraintTop_toBottomOf="@+id/login_activity_button"
        app:layout_constraintStart_toStartOf="@+id/login_activity_button"
        android:layout_marginTop="10dp"/>


    <Button
        android:id="@+id/login_activity_client"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/welcome_plans_ripple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/arent_you_a_client"
        android:orientation="horizontal"/>

</androidx.constraintlayout.widget.ConstraintLayout>