<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/ll_menu_first_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/include"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:padding="8dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_venda"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            app:cardBackgroundColor="@color/light_purple"
            app:cardCornerRadius="15dp"
            android:layout_marginEnd="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/icon_menu_initial"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/icon_buy"
                    android:layout_marginTop="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sell"
                    style="@style/holder_menu_title"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_inventory"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/light_purple"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/icon_box"
                    android:layout_marginTop="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inventory"
                    style="@style/holder_menu_title"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/rounded_top"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:textAppearance="@style/footerAppearence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/app_name"
            android:gravity="center_horizontal"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>